--- a/src/main/resources/assets/puffermod/lang/en_us.json
+++ b/src/main/resources/assets/puffermod/lang/en_us.json
@@ -1,6 +1,9 @@
 {
     //item
     "item.puffermod.refined_iron_ingot": "Refined iron ingot",
+    "item.puffermod.puffer_coins": "Puffer coins",
+    "item.puffermod.golden_coins": "Golden coins",
+    "item.puffermod.golden_string": "Golden string",
 
     //block
     "block.puffermod.salut": "Hi",
